--- a/css/other.css
+++ b/css/other.css
@@ -93,7 +93,7 @@
         border-radius: 0;
         margin       : 0;
         width        : 32rem;
-        height       : 52.3rem;
+        height       : 100%;
         box-shadow   : inset 0 12rem 2.5rem rgba(0, 0, 0, 0.45);
         transition   : width 1s;
     }
@@ -123,5 +123,10 @@
         width        : 0;
         height       : 0;
         content      : none;
+    }
+
+    .other-card__items {
+        margin-bottom: 3rem;
+        margin-right : 2.8rem;
     }
 }
